change punctuation for score
