# src/main/java/com/sanvalero/toastsapi/model/dto/MenuDTO.java
@@ -19,5 +19,5 @@ public class MenuDTO {
     @NotNull
     @Min(value = 0)
     @Max(value = 5)
-    private float punctuation;
+    private float score;
 }
